# pyMeteo

./: .gitignore  LICENSE  MANIFEST.in  README.md  TODO  meta.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py  version.py
.conda/: channeldata.json  index.html  meta.yaml
.github/workflows/: pr-tests.yml  publish-conda.yml  publish-pypi.yml  setup-and-test.yml
docs/: .buildinfo  CNAME  Makefile  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs-src/: Makefile
docs-src/source/: conf.py
docs/.doctrees/: index.doctree
docs/_sources/: index.rst.txt
docs/doctrees/: environment.pickle  index.doctree
docs/source/: conf.py  index.rst
pymeteo/: __init__.py  cmap_radar.txt  constants.py  dynamics.py  interp.py  radar.py  skewt.py  thermo.py  uwyo.py  wrf.py
pymeteo/UI/: acars.py
pymeteo/cm1/: MainInterface.py  OptionsWidget.py  PlotWidget.py  StatWidget.py  read_grads.py  read_hdf5.py
pymeteo/cm1/hodographs/: __init__.py  curved90.py  semicircle.py  sickle.py  straight.py  straightllws.py
pymeteo/cm1/soundings/: WK82.py  __init__.py
pymeteo/data/: acars.py
tests/: test_constants.py  test_dynamics.py  test_interp.py  test_radar.py  test_thermo.py  test_wrf.py
